# OK8MP-android

./: DELETE-FILES  README.md  SCR-android-11.0.0_1.2.1.txt  env.sh  imx-make.sh
bootable/recovery/minadbd/: minadbd_services.cpp
bootable/recovery/minui/: graphics_fbdev.cpp
development/samples/MultiDisplay/: AndroidManifest.xml
device/amlogic/yukawa/: yukawa.mk
device/amlogic/yukawa-kernel/: meson-g12a-sei510.dtb-4.19  meson-g12a-sei510.dtb-5.4  meson-sm1-khadas-vim3l.dtb-4.19  meson-sm1-khadas-vim3l.dtb-5.4  meson-sm1-sei610.dtb-4.19  meson-sm1-sei610.dtb-5.4
device/generic/art/: BoardConfigCommon.mk
device/generic/car/: AndroidProducts.mk  aosp_car_x86_64.mk
device/google/bramble-kernel/: adc_tm.ko  adsp_loader_dlkm.ko  adsprpc_compat.ko  arm-memlat-mon.ko  arm-smmu.ko  at24.ko  bcl_pmic5.ko  bcl_soc.ko  cam-fd-hw-mgr.ko  cam-sync.ko  cam_a5.ko  cam_actuator.ko  cam_cci.ko  cam_cdm.ko  cam_cpas.ko  cam_csiphy.ko  cam_custom_context.ko  cam_custom_csid_dev.ko  cam_custom_hw_mgr.ko  cam_fd.ko  (+134 more)
device/google/trout/hal/dumpstate/1.1/agl_build/: CMakeLists.txt
device/google/trout/hal/dumpstate/1.1/agl_build/scripts/: dumpstate_grpc_server.service
gcc-arm-8.3-2019.03-x86_64-aarch64-elf/: 8.3-2019.03-x86_64-aarch64-elf-manifest.txt
libnativehelper/: JniInvocation.cpp
libnativehelper/tests/: Android.bp
prebuilts/abi-dumps/: push.sh
prebuilts/qemu-kernel/: update_54_kernel.sh
prebuilts/remoteexecution-client/: CHANGELOG.md  latest  live
system/keymaster/: Android.bp
tools/doc_generation/: switcher4.py
tools/repohooks/: README.md  pre-upload.py
(+8214 files in other folders)
